# ARM-ISA-Simulator

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
.github/workflows/: branchCI.yml  ccpp.yml  documentation.yml  main.yml
Example Programs/: main.s
Templates/: TemplateCpp.cpp  TemplateHpp.hpp  TemplateUnitTest.cpp
UnitTests/: CMakeLists.txt  DLBUT.cpp  FileParserUT.cpp  SLListUT.cpp  StackUT.cpp
docs/: Doxyfile  Instruction_Execution.md  Process_Execution.md  Process_Initialization.md  Unit_Testing_Framework.md
examples/: main.s
include/: ArrayList.hpp  DLB.hpp  DLList.hpp  HashMap.hpp  IndexOutOfBoundsException.hpp  KeywordDict.hpp  LabelRedefinitionException.hpp  List.hpp  Logger.hpp  Process.hpp  ProcessInitializer.hpp  ProcessMetadata.hpp  Queue.hpp  Registers.hpp  SLList.hpp  Stack.hpp
include/Debug/: Assert.hpp  DebugUtil.hpp  Logger.hpp
include/Exceptions/: AssemblingException.hpp  IndexOutOfBoundsException.hpp  InvalidSyntaxException.hpp  LabelRedefinitionException.hpp  NoMainException.hpp
include/Instructions/: ADDInstruction.hpp  ANDInstruction.hpp  AddressingModes.hpp  ArithAndLogicInstruction.hpp  ArithAndLogicInstructionBuilder.hpp  BICInstruction.hpp  BInstruction.hpp  CMNInstruction.hpp  CMPInstruction.hpp  ConditionalCode.hpp  EORInstruction.hpp  FlowCtrlInstruction.hpp  FlowCtrlInstructionBuilder.hpp  InstructionBase.hpp  InstructionBuilder.hpp  InstructionBuilderRepository.hpp  InstructionIface.hpp  InstructionRepository.hpp  InstructionTypes.hpp  MOVInstruction.hpp  MemoryInstruction.hpp  MemoryInstructionBuilder.hpp  MemoryTransferTypes.hpp  MultipleMemoryInstruction.hpp  NOPInstruction.hpp  ORRInstruction.hpp  OffsetTypes.hpp  OpCodes.hpp
include/Instructions/Arithmetic/: ADDInstruction.hpp  SUBInstruction.hpp
include/Instructions/Comparison/: CMNInstruction.hpp  CMPInstruction.hpp
include/Instructions/FlowCtrl/: BInstruction.hpp  BLInstruction.hpp  BLXInstruction.hpp  BXInstruction.hpp
include/Instructions/Logic/: ANDInstruction.hpp  BICInstruction.hpp  EORInstruction.hpp  ORRInstruction.hpp
include/Instructions/Memory/: POPInstruction.hpp  PUSHInstruction.hpp
include/Instructions/Other/: MOVInstruction.hpp  NOPInstruction.hpp
include/Io/: ExpressionParser.hpp  FileIterator.hpp  FileParser.hpp  LineParser.hpp  LineTypes.hpp
include/Memory/: MemoryApi.hpp  MemoryConstants.hpp  MemoryManager.hpp
include/Util/: Assert.hpp
scripts/: build_docs.bat  build_with_tests.bat  build_with_tests.sh  build_without_tests.bat  build_without_tests.sh  log_file_converter.py
src/: CMakeLists.txt  KeywordDict.cpp  Logger.cpp  Main.cpp  Process.cpp  Process.hpp  ProcessInitializer.cpp  SLList.hpp  Stack.hpp
src/Debug/: Assert.cpp  CMakeLists.txt  DebugUtil.cpp  Logger.cpp
src/Instructions/: ADDInstruction.cpp  ANDInstruction.cpp  ArithAndLogicInstruction.cpp  ArithAndLogicInstructionBuilder.cpp  BICInstruction.cpp  BInstruction.cpp  CMPInstruction.cpp  CMakeLists.txt  EORInstruction.cpp  FlowCtrlInstruction.cpp  FlowCtrlInstructionBuilder.cpp  InstructionBase.cpp  InstructionBuilder.cpp  InstructionBuilderRepository.cpp  InstructionRepository.cpp  MOVInstruction.cpp  MemoryInstruction.cpp  MemoryInstructionBuilder.cpp  MultipleMemoryInstruction.cpp  ORRInstruction.cpp
src/Instructions/Arithmetic/: ADDInstruction.cpp  SUBInstruction.cpp
src/Instructions/Comparison/: CMNInstruction.cpp  CMPInstruction.cpp
src/Instructions/FlowCtrl/: BInstruction.cpp  BLInstruction.cpp  BLXInstruction.cpp  BXInstruction.cpp
src/Instructions/Logic/: BICInstruction.cpp
src/Instructions/Memory/: POPInstruction.cpp  PUSHInstruction.cpp
src/Io/: CMakeLists.txt  ExpressionParser.cpp  FileIterator.cpp  FileParser.cpp  LineParser.cpp
src/Memory/: CMakeLists.txt  MemoryApi.cpp  MemoryManager.cpp
src/Util/: Assert.cpp  CMakeLists.txt  Memory.txt  memory_file_formatter.py
templates/: TemplateUnitTest.cpp  TemplateUnitTestSuite.cpp
tests/: ArrayListUT.cpp  CMakeLists.txt  CMakeLists.txt.orig  DLBUT.cpp  DLListUT.cpp  FileIteratorUT.cpp  HashMapUT.cpp  LineParserUT.cpp  ListUT.cpp  LoggerUT.cpp  LoggerUT.cpp.orig  QueueUT.cpp  SLListUT.cpp  requirements.txt
tests/DataStructures/: CMakeLists.txt  DLBUT.cpp  DataStructureTestSuite.cpp  HashMapUT.cpp  LListUT.cpp  ListUT.cpp  QueueUT.cpp  StackUT.cpp
tests/DebugUT/: CMakeLists.txt  DebugTestSuite.cpp  LoggerUT.cpp
tests/Framework/: UnitTest.hpp  UnitTestSuite.hpp
tests/InstructionUT/: ADDUT.cpp  AddUT.cpp  AndUT.cpp  BicUT.cpp  BranchUT.cpp  CMakeLists.txt  CmpUT.cpp  EorUT.cpp  MOVUT.cpp  MovUT.cpp  OrrUT.cpp
tests/InstructionUT/ArithAndLogicUT/: AddUT.cpp  AndUT.cpp  ArithAndLogicTestSuite.cpp  BicUT.cpp  CMakeLists.txt  CmnUT.cpp  CmpUT.cpp  EorUT.cpp  LslUT.cpp  LsrUT.cpp  MovUT.cpp  MulUT.cpp  OrrUT.cpp  SubUT.cpp  TeqUT.cpp  TstUT.cpp
tests/InstructionUT/ArithmeticUT/: AddUT.cpp  CMakeLists.txt  SubUT.cpp
tests/InstructionUT/ComparisonUT/: CMakeLists.txt  CmnUT.cpp  CmpUT.cpp
tests/InstructionUT/FlowCtrlUT/: BlUT.cpp  BlxUT.cpp  BranchUT.cpp  BxUT.cpp  CMakeLists.txt  FlowCtrlTestSuite.cpp
tests/InstructionUT/LogicUT/: CMakeLists.txt
tests/InstructionUT/MemoryUT/: CMakeLists.txt  LdmAndStmUT.cpp  LdrAndStrUT.cpp  MemoryInstructionTestSuite.cpp  PushAndPopUT.cpp  PushUT.cpp
tests/InstructionUT/OtherUT/: CMakeLists.txt  MovUT.cpp
tests/IntegrationTests/: conditional_program_test.py  conftest.py  function_program_test.py  memory_program_test.py  simple_program_test.py  test.py  user_interaction_test.py
tests/IntegrationTests/SourcePrograms/: ConditionalProgram.s  Constants.s  FunctionProgram.s  MemoryProgram.s  SimpleProgram.s
tests/MemoryUT/: CMakeLists.txt  MemoryManagerUT.cpp  MemoryTestSuite.cpp
tests/Util/: CMakeLists.txt  UnitTest.hpp  UnitTestRunner.cpp  UnitTestRunner.hpp  UnitTestSuite.hpp
tests/support/: AssertMock.cpp  CMakeLists.txt  FileIteratorMock.cpp  LoggerMock.cpp  ProcessMock.cpp
